fix gap  and font-weight

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1572,7 +1572,7 @@ textarea.input-reset {
 .card__descr {
   margin-top: 24px;
   margin-bottom: 16px;
-  font-weight: 500;
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.3571428571;
   color: #292D32;
@@ -1824,7 +1824,7 @@ textarea.input-reset {
 .banner__descr {
   font-size: 18px;
   line-height: 1.3888888889;
-  font-weight: 500;
+  font-weight: 400;
   display: inline-block;
 }
 @media (max-width: 1024px) {
@@ -3205,7 +3205,7 @@ textarea.input-reset {
 }
 
 .contacts {
-  margin-top: 36px;
+  margin-top: 32px;
   margin-bottom: 72px;
 }
 .contacts__title {
@@ -3308,7 +3308,6 @@ textarea.input-reset {
 }
 @media (max-width: 1024px) {
   .contacts {
-    margin-top: 32px;
     margin-bottom: 32px;
   }
 }
@@ -3898,22 +3897,16 @@ textarea.input-reset {
     margin-top: 40px;
   }
 }
-@media (max-width: 1024px) {
-  .object {
-    margin-top: 45px;
-  }
-}
 
 .object-contacts__title {
   color: var(--dark);
   font-size: 24px;
   line-height: 1.2916666667;
-  font-weight: 600;
+  font-weight: 500;
 }
 @media (max-width: 1024px) {
   .object-contacts__title {
     font-size: 18px;
-    font-weight: 500;
   }
 }
 .object-contacts__row {
@@ -4012,7 +4005,7 @@ textarea.input-reset {
   color: inherit;
   font-size: 14px;
   line-height: 1.3571428571;
-  font-weight: 600;
+  font-weight: 500;
 }
 @media (max-width: 1024px) {
   .object-contacts__tooltip {
@@ -4076,7 +4069,7 @@ textarea.input-reset {
   color: #292D32;
   font-size: 16px;
   line-height: 1.4375;
-  font-weight: 500;
+  font-weight: 400;
 }
 .object-contacts-hours__row > div span:nth-child(2) {
   text-align: left;
@@ -4139,7 +4132,7 @@ textarea.input-reset {
   color: #292D32;
   font-size: 16px;
   line-height: 1.375;
-  font-weight: 600;
+  font-weight: 400;
   margin-left: 16px;
 }
 @media (max-width: 1024px) {
@@ -4177,7 +4170,7 @@ textarea.input-reset {
   color: #292D32;
   font-size: 16px;
   line-height: 23px;
-  font-weight: 500;
+  font-weight: 400;
   -webkit-transition: color 0.3s ease-in-out;
   -o-transition: color 0.3s ease-in-out;
   transition: color 0.3s ease-in-out;
@@ -4188,20 +4181,18 @@ textarea.input-reset {
 @media (max-width: 1024px) {
   .object-contacts-info__link {
     font-size: 14px;
-    font-weight: 400;
   }
 }
 .object-contacts-info > span {
   display: inline-block;
   color: #292D32;
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 400;
   line-height: 1.4375;
 }
 @media (max-width: 1024px) {
   .object-contacts-info > span {
     font-size: 14px;
-    font-weight: 400;
   }
 }
 
@@ -4324,7 +4315,7 @@ textarea.input-reset {
 }
 
 .about {
-  margin-top: 45px;
+  margin-top: 32px;
 }
 @media (max-width: 1024px) {
   .about .container {
@@ -4419,7 +4410,7 @@ textarea.input-reset {
 }
 
 .news {
-  margin-top: 45px;
+  margin-top: 32px;
   margin-bottom: 45px;
 }
 @media (max-width: 1024px) {
@@ -4513,7 +4504,7 @@ textarea.input-reset {
 }
 
 .news-page {
-  margin: 56px 0;
+  margin: 32px 0;
 }
 .news-page__time {
   margin-top: 16px;
@@ -4600,11 +4591,6 @@ textarea.input-reset {
   .news-page__content {
     margin-top: 24px;
     font-size: 13px;
-  }
-}
-@media (max-width: 1024px) {
-  .news-page {
-    margin: 40px 0;
   }
 }
 /*# sourceMappingURL=main.css.map */
