--- a/src/scss/components/about/_about.scss
+++ b/src/scss/components/about/_about.scss
@@ -1,5 +1,5 @@
 .about {
-    margin-top: 45px;
+    margin-top: 32px;
 
     &__title {}
 
