--- a/src/scss/components/news/_news-page.scss
+++ b/src/scss/components/news/_news-page.scss
@@ -1,5 +1,5 @@
 .news-page {
-    margin: 56px 0;
+    margin: 32px 0;
 
     &__time {
         margin-top: 16px;
@@ -99,9 +99,5 @@
             margin-top: 24px;
             font-size: 13px;
         }
-    }
-
-    @media (max-width:$tablet-max) {
-        margin: 40px 0;
     }
 }
