--- a/src/scss/components/news/_news.scss
+++ b/src/scss/components/news/_news.scss
@@ -1,5 +1,5 @@
 .news {
-    margin-top: 45px;
+    margin-top: 32px;
     margin-bottom: 45px;
 
     &__title {}
