--- a/src/scss/components/object/_object.scss
+++ b/src/scss/components/object/_object.scss
@@ -98,8 +98,4 @@
             margin-top: 40px;
         }
     }
-
-    @media (max-width:$tablet-max) {
-        margin-top: 45px;
-    }
 }
