--- a/src/scss/ui-kit/_banner.scss
+++ b/src/scss/ui-kit/_banner.scss
@@ -69,7 +69,7 @@
     &__descr {
         font-size: 18px;
         line-height: math.div(25, 18);
-        font-weight: 500;
+        font-weight: 400;
         display: inline-block;
 
         @media (max-width:$tablet-max) {
