--- a/src/scss/ui-kit/_card.scss
+++ b/src/scss/ui-kit/_card.scss
@@ -66,7 +66,7 @@
         margin-top: 24px;
         margin-bottom: 16px;
 
-        font-weight: 500;
+        font-weight: 400;
         font-size: 14px;
         line-height: math.div(19, 14);
         color: #292D32;
